- add brick properties - add brick destruction

--- a/Assets/Resources/config.json
+++ b/Assets/Resources/config.json
@@ -35,5 +35,49 @@
 			"X":0,
 			"Y":6
 		}
+	},
+	"Bricks":
+	{
+		"Color":
+		[
+			{
+				"R":0.596,
+				"G":0.125,
+				"B":0.294,
+				"A":1
+			},
+			{
+				"R":1,
+				"G":0,
+				"B":0.051,
+				"A":1
+			},
+			{
+				"R":1,
+				"G":0.471,
+				"B":0,
+				"A":1
+			},
+			{
+				"R":1,
+				"G":0.82,
+				"B":0,
+				"A":1
+			},
+			{
+				"R":0.816,
+				"G":1,
+				"B":0,
+				"A":1
+			}
+		],
+		"SpeedBoost":
+		[
+			2.0,
+			1.6,
+			1.4,
+			1.2,
+			1
+		]
 	}
 }
